--- a/Infinity Games/projeto infinity/nbproject/project.properties
+++ b/Infinity Games/projeto infinity/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=projeto infinity
+application.vendor=Cliente
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,7 +33,9 @@ dist.jar=${dist.dir}/projeto_infinity.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/projeto_infinity
+endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.30.jar=../mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +44,8 @@ javac.classpath=\
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.mysql-connector-java-8.0.30.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
