--- a/Infinity Games/projeto infinity/nbproject/project.properties
+++ b/Infinity Games/projeto infinity/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/projeto_infinity
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\luisr\\Downloads\\mysql-connector-java-8.0.30.jar
+file.reference.mysql-connector-java-8.0.30.jar=../Banco de dados/mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
